# ecommerce_React_Django

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.tours/: intro.tour
backend/backend/: settings.py  urls.py
backend/base/: models.py  serializer.py  serializers.py  urls.py  views.py
backend/base/tests/: conftest.py  test_models.py  test_product_views.py
backend/base/urls/: order_urls.py  product_urls.py  user_urls.py
backend/base/views/: order_views.py  product_views.py  user_views.py
backend/frontend/: package-lock.json  package.json
backend/frontend/src/: App.js  store.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  store.js
frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
frontend/src/components/: CheckoutSteps.js  Header.js  Loader.js  Message.js  Paginate.js  Product.js  ProductCarousel.js  SearchBox.js
frontend/src/constants/: cartConstants.js  userConstants.js
frontend/src/reducers/: cartReducers.js  orderReducers.js  productReducers.js  userReducers.js
frontend/src/screens/: CartScreen.js  HomeScreen.js  LoginScreen.js  OrderListScreen.js  OrderScreen.js  PaymentScreen.js  PlaceOrderScreen.js  ProductEditScreen.js  ProductListScreen.js  ProductScreen.js  ProfileScreen.js  RegisterScreen.js  ShippingScreen.js  UserEditScreen.js  UserListScreen.js
training/app/: serializer.py  views.py
training/app/migrations/: 0001_initial.py
training/training/: settings.py  urls.py
(+19 files in other folders)
