[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["leon <90852553+leon0719@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
